fixed no-movies-wrap styles

--- a/src/sass/components/_main-container.scss
+++ b/src/sass/components/_main-container.scss
@@ -15,7 +15,6 @@
 }
 
 .main-section__card-conteiner,
-.no-movies-wrap,
 .not-found {
   width: 100%;
   cursor: pointer;
@@ -48,6 +47,9 @@
   }
 }
 
+.no-movies-wrap {
+  width: 100%;
+}
 .main-section__image {
   width: 100%;
   overflow: hidden;
@@ -210,7 +212,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
 
   @include tablet {
     flex-basis: calc((100% - 30px) / 2);
@@ -225,32 +226,37 @@
   border-radius: 4px;
   overflow: hidden;
   margin-bottom: 15px;
-
 }
 .movie--isloading-slider {
   //margin-right:20px;
 }
 .movie--isloading-slider .loading-image-slider {
- height: 293px;
-@include tablet {
+  height: 293px;
+  @include tablet {
     height: 216px;
   }
 
   @include desktop {
     height: 324px;
   }
-  background-image: -webkit-linear-gradient(left,
-      #ececec 0px,
-      #f4f4f4 40px,
-      #ececec 80px);
-  background-image: -o-linear-gradient(left,
-      #ececec 0px,
-      #f4f4f4 40px,
-      #ececec 80px);
-  background-image: linear-gradient(90deg,
-      #ececec 0px,
-      #f4f4f4 40px,
-      #ececec 80px);
+  background-image: -webkit-linear-gradient(
+    left,
+    #ececec 0px,
+    #f4f4f4 40px,
+    #ececec 80px
+  );
+  background-image: -o-linear-gradient(
+    left,
+    #ececec 0px,
+    #f4f4f4 40px,
+    #ececec 80px
+  );
+  background-image: linear-gradient(
+    90deg,
+    #ececec 0px,
+    #f4f4f4 40px,
+    #ececec 80px
+  );
   background-size: 250px;
   -webkit-animation: shine-loading-image 2s infinite ease-out;
   animation: shine-loading-image 2s infinite ease-out;
